    relay requires Tor 0.2.0.8-alpha or newer.
  o Add a workaround for a bug that prevented Vidalia's tray icon from
    getting adding to the system notification area on Gnome when Vidalia was
    run on system startup. Patch by Steve Tyree. (Ticket #247)
  o Fix a bug that prevented the control panel from displaying when
    running on the Enlightenment window manager. Patch by Steve Tyree.


0.1.12  16-Mar-2009
  o Fix a bug in the hidden service settings configuration class that
    could lead to compile errors in Visual Studio and on IRIX.
  o Fix a build error that occurred on IRIX when using the MIPSPro
    compiler. Patch from Matthew Saunier.
  o Remove two duplicated strings in the Spanish translation of Qt's
    internal strings (qt_es.po). The duplicated strings caused build
    errors when building with Qt 4.5. (Ticket #469)
  o Remove the code that altered PublishServerDescriptor when becoming a
    bridge, since Tor handles that itself now, and ensure that BridgeRelay
    is reset when going from bridge to just-a-client mode.
  o Remove an unnecessary #include from helpbrowser.cpp.
  o Add an application icon based on Tor's logo to the vidalia.desktop
    file.


0.1.11  16-Feb-2009
  o Remove support for configuring Tor's User and Group options in the 
    Advanced settings page.
  o Only set HttpsProxy if both the "I use a proxy..." checkbox and the 
    "Use this proxy for HTTPS also" checkboxes are checked. Otherwise,
    unset it. (Ticket #440)
  o Fix a use of an uninitialized variable that would occur when Tor was
    already running when Vidalia started, and the "Start Tor when Vidalia
    Starts" checkbox is checked. (Ticket #443)
  o Switch to using 'getinfo address-mappings' instead of
    'getinfo addr-mappings'. (Ticket #454)
  o Backport a change that removes a verticalSpacing property from a .ui
    file, so Vidalia 0.1.x will still build on Qt 4.2. (Ticket #442)
  o Fix some memory leaks in the hidden service configuration dialog.